# opengl-fun

./: .gitignore  CMakeLists.txt  README.md
include/: display.h  shader.h
src/: display.cc  main.cc  shader.cc
